Bug 57388 - [IVB]I-G-T/testdisplay warning with "<4>[ 1331.226181] HDMI: DVI dual 0, max TMDS clock 0, latency present 0 0, video latency 0 0, audio latency 0 0" ”
Summary: [IVB]I-G-T/testdisplay warning with "<4>[ 1331.226181] HDMI: DVI dual 0, max ...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Daniel Vetter
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-22 03:06 UTC by Guang Yang
Modified: 2017-10-06 14:47 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
dmesg info with testdisplay (605.79 KB, text/plain)
2012-11-22 03:06 UTC, Guang Yang
no flags Details

Description Guang Yang 2012-11-22 03:06:30 UTC
Created attachment 70400 [details]
dmesg info with testdisplay

System Environment:
--------------------------
Platform:        Ivybridge
Kernel: (drm-intel-next-queued)2d60696d645809c6a1a737c31898b3e630d7d495
Bug detailed description:
-------------------------
   On Ivybridge platform, after running testdisplay  dmesg -r shows:
<4>[ 1331.226181] HDMI: DVI dual 0, max TMDS clock 0, latency present 0 0, video latency 0 0, audio latency 0 0
 I attach the dmesg.
Comment 1 Guang Yang 2012-11-22 03:15:05 UTC
(In reply to comment #0)
> Created attachment 70400 [details]
> dmesg info with testdisplay
> 
> System Environment:
> --------------------------
> Platform:        Ivybridge
> Kernel: (drm-intel-next-queued)2d60696d645809c6a1a737c31898b3e630d7d495
> Bug detailed description:
> -------------------------
>    On Ivybridge platform, after running testdisplay  dmesg -r shows:
> <4>[ 1331.226181] HDMI: DVI dual 0, max TMDS clock 0, latency present 0 0,
> video latency 0 0, audio latency 0 0
>  I attach the dmesg.
BTW, we connected 3 display (VGA+2 HDMI) with the machine.
Comment 2 Daniel Vetter 2012-11-22 08:55:51 UTC
The message is harmless, this patch should tune it down to debug levels:

https://patchwork.kernel.org/patch/1783171/

Please test.
Comment 3 Guang Yang 2012-11-27 04:16:26 UTC
(In reply to comment #2)
> The message is harmless, this patch should tune it down to debug levels:
> 
> https://patchwork.kernel.org/patch/1783171/
> 
> Please test.
Yeah, the debug levels have changed to 7, the patch can work well.
Comment 4 Daniel Vetter 2012-11-27 08:37:37 UTC
Fyi the patch hasn't been merged yet, so I think we shouldn't close this just yet. Unfortunately we don't have a "patch works but not yet merged" state on fdo bugzilla, so I'll just reopen it.
Comment 5 Daniel Vetter 2012-12-05 19:53:44 UTC
Fix merged into drm-next as

commit 670c1ef6508c8fdd83dc55968fc1ce7284d849a7
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Thu Nov 22 09:53:55 2012 +0100

    drm/edid: tune down debug message in parse_hdmi_vsdb

Should be included in -nightly.
Comment 6 Guang Yang 2012-12-07 01:58:45 UTC
I change the status to resolved, because only find the patch in -nightly but not in - dinq or -fixed, it seems the drm-next branch your said  is in your another tree: drm-upstream.
Daniel, should we verified the bug if we only find the patch in -nightly.
Comment 7 Gordon Jin 2012-12-07 06:11:19 UTC
(In reply to comment #6)
Daniel, should we verified the bug if we only
> find the patch in -nightly.

I think so. This is the purpose of -nightly.
Comment 8 Daniel Vetter 2012-12-07 08:02:30 UTC
Yeah, the idea behind -nightly is that it contains other trees and so allows us to verify/test them before they're merged into one of the tree's I maintain. This is because I do backmerges and rebases to never upstream only when required for merging patches (upstream policy), hence we would otherwise have a few weeks (sometimes months) of delays until a fix in a different tree can be verified.
Comment 9 Elizabeth 2017-10-06 14:47:48 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.